<resources>
    <string name="app_agree">jz.1</string>
    <string name="app_disagree">jz.2</string>
    <string name="app_cancel">jz.3</string>
    <string name="app_connection">jz.4</string>
    <string name="app_sign_in">jz.5</string>
    <string name="app_registration">jz.6</string>
    <string name="app_forgot_password">jz.7</string>
    <string name="Programming">jz.8</string>
    <string name="app_menue">jz.9</string>
    <string name="app_home_check_sensor">jz.10</string>
    <string name="app_trigger">jz.11</string>
    <string name="app_home_program_sensor_phone">jz.12</string>
    <string name="app_home_id_copy">jz.13</string>
    <string name="app_setup">jz.14</string>
    <string name="app_home_obdii_relearna">jz.15</string>
    <string name="app_home_cloud_information">jz.16</string>
    <string name="app_home_online_shopping">jz.17</string>
    <string name="app_user_manual">jz.18</string>
    <string name="app_scan_2d_code">jz.19</string>
    <string name="app_mmy">jz.20</string>
    <string name="app_select_car_makes">jz.21</string>
    <string name="app_select_car_model">jz.22</string>
    <string name="app_select_year">jz.23</string>
    <string name="app_number_choice">jz.24</string>
    <string name="app_start">jz.25</string>
    <string name="app_key_in">jz.26</string>
    <string name="app_scan_and_packing">jz.27</string>
    <string name="app_program">jz.28</string>
    <string name="app_copy_original">jz.29</string>
    <string name="app_original_sensor">jz.30</string>
    <string name="app_original_id">jz.31</string>
    <string name="app_new_sensor">jz.32</string>
    <string name="app_new_sensor_list">jz.33</string>
    <string name="app_my_favorite">jz.34</string>
    <string name="app_scan">jz.35</string>
    <string name="app_setting">jz.36</string>
    <string name="app_setting_my_favorite">jz.37</string>
    <string name="app_my_favorite_setting">jz.38</string>
    <string name="app_setting_wifi">jz.39</string>
    <string name="app_wifi">jz.40</string>
    <string name="app_setting_bluetooth">jz.41</string>
    <string name="app_bluetooth">jz.42</string>
    <string name="app_my_device">jz.43</string>
    <string name="app_bluebud_other_device">jz.44</string>
    <string name="app_setting_unit">jz.45</string>
    <string name="app_units_tire">jz.46</string>
    <string name="app_temp_title">jz.47</string>
    <string name="app_id_dec_hex">jz.48</string>
    <string name="app_auto">jz.49</string>
    <string name="app_minutes">jz.50</string>
    <string name="app_never">jz.51</string>
    <string name="app_setting_language">jz.52</string>
    <string name="app_setting_device_information">jz.53</string>
    <string name="app_device_name">jz.54</string>
    <string name="app_model">jz.55</string>
    <string name="infomation_serial_number">jz.56</string>
    <string name="infomation_software_version">jz.57</string>
    <string name="app_hardware_version">jz.58</string>
    <string name="app_database_version">jz.59</string>
    <string name="app_check_for_updates">jz.60</string>
    <string name="app_system_update_auto">jz.61</string>
    <string name="app_reset_all_settings">jz.62</string>
    <string name="app_setting_privacy_policy">jz.63</string>
    <string name="app_scan_tips">jz.64</string>
    <string name="Setting">jz.65</string>
    <string name="Area">jz.66</string>
    <string name="to_give">jz.67</string>
    <string name="Select">jz.68</string>
    <string name="Languages">jz.69</string>
    <string name="Languages_info">jz.70</string>
    <string name="Privacy_Policy">jz.71</string>
    <string name="Welcome">jz.72</string>
    <string name="Agree">jz.73</string>
    <string name="Disagree">jz.74</string>
    <string name="Sign_in">jz.75</string>
    <string name="E_mail">jz.76</string>
    <string name="Registration">jz.77</string>
    <string name="Password">jz.78</string>
    <string name="Forgot_password">jz.79</string>
    <string name="Reset_Password">jz.80</string>
    <string name="Og_email">jz.81</string>
    <string name="Submit">jz.82</string>
    <string name="Go_email">jz.83</string>
    <string name="Account_creation">jz.84</string>
    <string name="Create_your_email_account">jz.85</string>
    <string name="Account_Number">jz.86</string>
    <string name="Choose_a_password">jz.87</string>
    <string name="At_least_8_characters">jz.88</string>
    <string name="Repeat_password">jz.89</string>
    <string name="Product_serial_number">jz.90</string>
    <string name="Personal_details">jz.91</string>
    <string name="First_Name">jz.92</string>
    <string name="Last_Name">jz.93</string>
    <string name="Company">jz.94</string>
    <string name="Contact_Phone_Number">jz.95</string>
    <string name="Physical_address_Mailing_address">jz.96</string>
    <string name="Country">jz.97</string>
    <string name="Street">jz.98</string>
    <string name="City">jz.99</string>
    <string name="State">jz.100</string>
    <string name="ZP_Code">jz.101</string>
    <string name="Registration_success">jz.102</string>
    <string name="Orange_USB_TPMS">jz.103</string>
    <string name="Data_Loading">jz.421</string>
    <string name="Orange_USB_TPMS_Application">jz.105</string>
    <string name="Program_USB_TPMS">jz.106</string>
    <string name="Program_USB_PAD">jz.107</string>
    <string name="Cloud_information">jz.108</string>
    <string name="Online_shopping">jz.109</string>
    <string name="Users_manual">jz.110</string>
    <string name="Log_out">jz.111</string>
    <string name="Are_you_sure_you_want_to_log_out">jz.112</string>
    <string name="Yes">jz.113</string>
    <string name="cancel">jz.114</string>
    <string name="ProgramUSB_TPMS">jz.115</string>
    <string name="Download_MYY_data">jz.116</string>
    <string name="ID_COPY">jz.117</string>
    <string name="Program">jz.118</string>
    <string name="Methods_of_vehicle_data_selection">jz.119</string>
    <string name="Scan_Code">jz.120</string>
    <string name="Vehicle_data_selection">jz.121</string>
    <string name="Please_scan_the_QR_Code_on_the_catalog_or_poster">jz.122</string>
    <string name="Select_CAR_Make">jz.123</string>
    <string name="Select_CAR_Model">jz.124</string>
    <string name="Select_Year">jz.125</string>
    <string name="Please_insert_the_sensor_into_the_USB_PAD">jz.126</string>
    <string name="Unlinked">jz.127</string>
    <string name="START">jz.128</string>
    <string name="MENU">jz.9</string>
    <string name="Programming_completed">jz.130</string>
    <string name="Please_remove_the_sensor">jz.131</string>
    <string name="Programming_failed">jz.132</string>
    <string name="Please_press_RE_PROGRAM">jz.133</string>
    <string name="RE_PROGRAM">jz.134</string>
    <string name="Relearn_Procedure">jz.135</string>
    <string name="Key_in_the_original_sensor_ID_number">jz.136</string>
    <string name="sensor_ID_number">jz.137</string>
    <string name="ID_code_should_be_8_characters">jz.138</string>
    <string name="Bluetooth_pairing_requirements">jz.139</string>
    <string name="would_like_to_with_pair">jz.140</string>
    <string name="Cancel">jz.141</string>
    <string name="Pair">jz.142</string>
    <string name="Program_sensor">jz.28</string>
    <string name="Programming_do_not_move_sensors">jz.144</string>
    <string name="Next">jz.145</string>
    <string name="error">jz.146</string>
    <string name="Programming_failed_where">jz.147</string>
    <string name="Get_location">jz.148</string>
    <string name="Prog_Sensor">jz.149</string>
    <string name="Please_Confirm_That_The_Sensor_Is_Connect">jz.150</string>
    <string name="Sound">jz.151</string>
    <string name="AreaLanguage">jz.152</string>
    <string name="Version_update">jz.153</string>
    <string name="ProvideUsbTpmsApp">jz.154</string>
    <string name="step1_1">jz.155</string>
    <string name="step1_2">jz.156</string>
    <string name="step1_3">jz.157</string>
    <string name="step1_4">jz.158</string>
    <string name="step1_5">jz.159</string>
    <string name="step1_6">jz.160</string>
    <string name="step1_7">jz.161</string>
    <string name="step1_8">jz.162</string>
    <string name="step2_1">jz.163</string>
    <string name="step2_2">jz.164</string>
    <string name="step2_3">jz.165</string>
    <string name="step2_4">jz.166</string>
    <string name="step2_5">jz.167</string>
    <string name="step2_6">jz.168</string>
    <string name="step2_7">jz.169</string>
    <string name="step2_8">jz.170</string>
    <string name="step2_9">jz.171</string>
    <string name="step3_1">jz.172</string>
    <string name="step3_2">jz.173</string>
    <string name="step3_3">jz.174</string>
    <string name="step3_4">jz.175</string>
    <string name="step3_5">jz.176</string>
    <string name="step3_6">jz.177</string>
    <string name="step3_7">jz.178</string>
    <string name="step3_8">jz.179</string>
    <string name="step3_9">jz.180</string>
    <string name="step4_1">jz.181</string>
    <string name="step4_2">jz.182</string>
    <string name="step4_3">jz.183</string>
    <string name="step4_4">jz.184</string>
    <string name="step4_5">jz.185</string>
    <string name="step4_6">jz.186</string>
    <string name="step4_7">jz.187</string>
    <string name="step4_8">jz.188</string>
    <string name="step4_9">jz.189</string>
    <string name="step4_10">jz.190</string>
    <string name="step4_11">jz.191</string>
    <string name="Set_up">jz.192</string>
    <string name="Check_for_updates">jz.193</string>
    <string name="update">jz.194</string>
    <string name="Automatic_update">jz.195</string>
    <string name="USB_TPMS_APP_will_automatically_install_updates">jz.196</string>
    <string name="paired_with_your_device">jz.197</string>
    <string name="SelectDevice">jz.198</string>
    <string name="For_developer_information">jz.199</string>
    <string name="Updating">jz.200</string>
    <string name="Please_scan_the_correct_QR_code">jz.201</string>
    <string name="norelarm">jz.202</string>
    <string name="confirm_password">jz.203</string>
    <string name="be_register">jz.204</string>
    <string name="signfall">jz.205</string>
    <string name="nointernet">jz.206</string>
    <string name="store_type">jz.207</string>
    <string name="Distributor">jz.208</string>
    <string name="Retailer">jz.209</string>
    <string name="nointer">jz.210</string>
    <string name="errorpass">jz.211</string>
    <string name="update_success">jz.212</string>
    <string name="need_upadte">jz.213</string>
    <string name="is_latest">jz.214</string>
    <string name="SayQusition">jz.215</string>
    <string name="PleaseMessage">jz.216</string>
    <string name="notempty">jz.217</string>
    <string name="sendsuccess">jz.218</string>
    <string name="sendfalse">jz.219</string>
    <string name="minuteago">jz.220</string>
    <string name="dayago">jz.221</string>
    <string name="secago">jz.222</string>
    <string name="Online_customer_service">jz.223</string>
    <string name="Customer_service_specialist">jz.224</string>
    <string name="hourago">jz.225</string>
    <string name="monthago">jz.226</string>
    <string name="yeargo">jz.227</string>
    <string name="checkscan">jz.228</string>
    <string name="Scan_Two">jz.229</string>
    <string name="keyin">jz.230</string>
    <string name="app_sensor_info_read">jz.231</string>
    <string name="app_press">jz.232</string>
    <string name="app_to_trigger_sensor">jz.233</string>
    <string name="app_sensor_info_position">jz.234</string>
    <string name="Notall">jz.235</string>
    <string name="app_voltage">jz.236</string>
    <string name="array_language_english">jz.237</string>
    <string name="array_language_simch">jz.238</string>
    <string name="array_language_trach">jz.239</string>
    <string name="array_language_italian">jz.240</string>
    <string name="array_language_german">jz.241</string>
    <string name="app_reset">jz.62</string>
    <string name="app_connecting">jz.4</string>
</resources>